--- a/Beebotte.API.Client.Net/Beebotte.API.Client.Net/packages.config
+++ b/Beebotte.API.Client.Net/Beebotte.API.Client.Net/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EngineIoClientDotNet" version="0.9.11" targetFramework="net35" />
-  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net35" requireReinstallation="True" />
-  <package id="SocketIoClientDotNet" version="0.9.6" targetFramework="net35" />
+  <package id="EngineIoClientDotNet" version="0.9.22" targetFramework="net4" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net4" />
+  <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="net4" />
   <package id="System.Threading.Tasks" version="3.0.1" targetFramework="net35" />
-  <package id="WebSocket4Net" version="0.10" targetFramework="net35" requireReinstallation="True" />
+  <package id="WebSocket4Net" version="0.14.1" targetFramework="net4" />
 </packages>
