--- a/Beebotte.API.Client.Net/Beebotte.API.Client.Net/app.config
+++ b/Beebotte.API.Client.Net/Beebotte.API.Client.Net/app.config
@@ -4,11 +4,15 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebSocket4Net" publicKeyToken="eb4e154b696bf72a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-0.14.1.0" newVersion="0.14.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SuperSocket.ClientEngine" publicKeyToken="ee9af13f57f00acc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.8.0.14" newVersion="0.8.0.14" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
