--- a/Beebotte.API.Client.Net/Beebotte.API.Client.Net/packages.config
+++ b/Beebotte.API.Client.Net/Beebotte.API.Client.Net/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EngineIoClientDotNet" version="0.9.22" targetFramework="net4" />
-  <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net4" />
+  <package id="EngineIoClientDotNet" version="1.0.3" targetFramework="net4" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net4" />
   <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="net4" />
-  <package id="WebSocket4Net" version="0.14.1" targetFramework="net4" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.8.0.14" targetFramework="net4" />
+  <package id="WebSocket4Net" version="0.15.0" targetFramework="net4" />
 </packages>
